fixed alignment issues in open view

--- a/style.css
+++ b/style.css
@@ -43,18 +43,15 @@ svg {
 }
 
 .dialog {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    width: 1920px;
+    height: 1080px;
     background-color: white;
     z-index: 99;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
+    width: 1920px;
+    height: 1080px;
     position: absolute;
     transform: scale(0.3);
     transform-origin: left;
@@ -73,4 +70,8 @@ svg {
 #outer-container {
     height: 1080px;
     width: 1920px;
+}
+
+.dialog + #outer-container {
+    display: none;
 }
